src/objects/inscor__Country__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Alpha_2_Code__c</fullName>
        <label>Alpha-2 Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Alpha_3_Code__c</fullName>
        <label>Alpha-3 Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Country_Long_Name__c</fullName>
        <label>Country Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Export_Control__c</fullName>
        <label>Export Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Export Controlled</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Numeric__c</fullName>
        <inlineHelpText>Numeric Code for the country per ISO 3166.</inlineHelpText>
        <label>Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Alpha_2_Code__c</columns>
        <columns>inscor__Alpha_3_Code__c</columns>
        <columns>inscor__Country_Long_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>